k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: conduit
  labels:
    app: conduit
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: conduit
